# shareprompts

./: .gitignore  README.md  nginx.conf.j2  site.conf  site.conf.j2
ansible/: deploy.yml  letsencrypt.yml  setup.yml  shareprompts-backend-api.service
backend/: Cargo.toml  package-lock.json  package.json  rollup.config.mjs  tailwind.config.js  vite.config.js
backend/migrations/2023-04-01-203152_create_conversations/: down.sql  up.sql
backend/migrations/2023-04-01-203152_create_posts/: up.sql
backend/migrations/2023-04-28-190252_create_users/: up.sql
backend/migrations/2023-05-02-202600_index/: up.sql
backend/site/: index.css  index.hbs  main.js  package-lock.json  package.json  tailwind.config.js
backend/src/: main.rs  schema.rs
extension/: background.js  index.html  index.js  main.html  manage.html  manager.js  manifest.json  package-lock.json  package.json  popup.html  popup.js  vite.config.js
extension/chrome/: manifest.json
extension/firefox/: index.js  manifest.json
extension/src/: App.vue  Manage.vue  PopupApp.vue  storageBacked.js
extension_firefox/: manifest.json  package-lock.json  popup.html  tailwind.config.js  vite.config.js
extension_firefox/src/: PopupApp.vue
site/: chatgpt.xcf  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
site/src/: App.vue  Doc.vue  Hero.vue  Manage.vue  Privacy.vue  Support.vue  Terms.vue  config.js  main.css
site/src/components/: NavBar.vue  SpeakerIcon.vue
site/src/views/: About.vue  Conversation.vue  NotFound.vue
