[package]
name = "shareprompts-backend-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
chrono = "0.4.24"
serde = { version = "1.0", features = ["derive"] }
diesel = { version = "2.0.0", features = ["postgres", "r2d2", "chrono"] }
dotenvy = "0.15.7"
env_logger = "0.10.0"
uuid = { version = "1.3.0", features = ["v4", "fast-rng"] }
serde_json = "1.0"
rustls = "0.21.0"
awc = { version = "3.1.1", features = ["rustls"] }
diesel_migrations = "2.0.0"
log = "0.4.17"
actix-web-httpauth = "0.8"
handlebars = "3"
base64 = "*"
oauth2 = "4.3.0"
jsonwebtoken = "8.3.0"
actix-session = { version = "0.7.2", features = ["cookie-session"] }
